Add information on what the app is about.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,10 @@
 <h1>Welcome to our App!</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<p>Welcome to our app! It is called TeacherTinder (name subject to change) and 
+this app is designed to match students with their professors. We will match 
+students with complementary professors, who not only teach in a way the student 
+can relate to but who also match their pacing. users can change the weights on 
+different traits for their own personal preference Criteria for teachers: 
+Patience, Clarity, Organization, Years experience, Teaching style 
+(i.e. flipped classroom, visual vs auditory, etc.) Curriculum design, 
+Instructional assessment, Availability after class, Communication outside of 
+class, Engagement, and Flexibility</p>
