Added a background color and made the name of the app bold.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome to our App!</h1>
-<p>Welcome to our app! It is called TeacherTinder (name subject to change) and 
+<p>Welcome to our app! It is called <b>TeacherTinder</b> (name subject to change) and 
 this app is designed to match students with their professors. We will match 
 students with complementary professors, who not only teach in a way the student 
 can relate to but who also match their pacing. users can change the weights on 
