Set up link to new survey.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,3 +8,5 @@ Patience, Clarity, Organization, Years experience, Teaching style
 (i.e. flipped classroom, visual vs auditory, etc.) Curriculum design, 
 Instructional assessment, Availability after class, Communication outside of 
 class, Engagement, and Flexibility</p>
+<br>
+<%= link_to 'Student Survey', new_survey_path %>
