--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -3,19 +3,22 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 h1 {
-    color: red;
+    color: black;
     font-family: verdana;
     font-size: 32px;
     text-align: center;
 }
 
 body {
-    background-color: cyan;
+    background-color: #D9BDBD;
 }
 
 p {
     border-style: double;
     margin-right: 150px;
     margin-left: 100px;
-    
+}
+
+div {
+    text-align: center;
 }
