--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -10,7 +10,7 @@ h1 {
 }
 
 body {
-    background-color: cyan;
+    background-color: #E8D5D5;
 }
 
 p {
@@ -18,4 +18,8 @@ p {
     margin-right: 150px;
     margin-left: 100px;
     
+}
+
+div {
+    text-align: center;
 }
