--- a/app/views/survey/index.html.erb
+++ b/app/views/survey/index.html.erb
@@ -6,7 +6,7 @@
     <th>Year</th>
   </tr>
  
-  <% @teachers.each do |teacher| %>
+  <% @teacher.each do |teacher| %>
     <tr>
       <td><%= teacher.name %></td>
       <td><%= teacher.year %></td>
