--- a/app/views/survey/index.html.erb
+++ b/app/views/survey/index.html.erb
@@ -1,30 +1,15 @@
-<!--<h1>Listing Teachers</h1>
- 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Year</th>
-  </tr>
- 
-  <% @teacher.each do |teacher| %>
-    <tr>
-      <td><%= teacher.name %></td>
-      <td><%= teacher.year %></td>
-      
-    </tr>
-  <% end %>
-</table>-->
+
 
 <h1>Teachers</h1>
 
 <h2>Search by Year:</h2>
-  <%= form_tag(years_path, method: :get) do %>
+  <%= form_tag(survey_index_path, method: :get) do %>
     <%= text_field_tag(:search, params[:search]) %>
     <%= submit_tag ("Search") %>
   <% end %>
   
-  <% @teachers.each do |teacher| %>
+  <% @teacher.each do |teacher| %>
     <ul>
-      <li><%= link_to teacher.name, teacher_path(teacher) %></li><br>
+      <li><%= link_to teacher.name, survey_path(teacher) %></li><br>
     </ul>
   <% end %>
