--- a/app/views/survey/index.html.erb
+++ b/app/views/survey/index.html.erb
@@ -6,8 +6,8 @@
 
 <h2>Search by Year:</h2>
   <%= form_tag(survey_index_path, method: :get) do %>
-    <%= text_field_tag(:search, params[:search]) %>
-    <%= submit_tag ("Search") %>
+    Year <%= text_field_tag(:search, params[:search]) %>
+    <%= submit_tag 'Search', name: nil %>
   <% end %>
   
   <% @teacher.each do |teacher| %>
