--- a/app/views/survey/index.html.erb
+++ b/app/views/survey/index.html.erb
@@ -7,10 +7,10 @@
 <h2>Search by Year:</h2>
   <%= form_tag(survey_index_path, method: :get) do %>
     Year <%= text_field_tag(:search, params[:search]) %>
-    <%= submit_tag 'Search', name: nil %>
+    <%= submit_tag 'Search', :name => nil %>
   <% end %>
   
-  <% @teacher.each do |teacher| %>
+  <% @teachers.each do |teacher| %>
     <ul>
       <li><%= link_to teacher.name, survey_path(teacher) %></li><br>
     </ul>
