Added controllers, models, index routes, and new databases for the other two questions.

--- a/app/views/instruct/show.html.erb
+++ b/app/views/instruct/show.html.erb
@@ -1,6 +1,6 @@
 <p>
     <strong>Name:</strong>
-    <%= @teacher.name %>
+    <%= @prof.name %>
     
 </p>
 
@@ -29,4 +29,4 @@
     <%= @instruct.style %>
 </p>
 
-<%= link_to 'Teacher List', survey_index_path %>
+<%= link_to 'Teacher List', instruct_index_path %>
