--- a/app/views/survey/index.html.erb
+++ b/app/views/survey/index.html.erb
@@ -3,10 +3,14 @@
 <h1>Teachers</h1>
 
 <div><%= link_to 'Main Menu', welcome_index_path %></div>
+<div><%= link_to 'Search By Time', prof_index_path %></div>
+<div><%= link_to 'Search By Type', instruct_index_path %></div>
 
-<h2>Search by Year:</h2>
+<h2>What is your academic year?</h2>
+<h4>Please enter: Freshman, Sophomore, Junior, or Senior</h4>
+
   <%= form_tag(survey_index_path, method: :get) do %>
-    Year <%= text_field_tag(:search, params[:search]) %>
+    <%= text_field_tag(:search, params[:search]) %>
     <%= submit_tag 'Search', :name => nil %>
   <% end %>
   
