--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,4 +9,5 @@ Patience, Clarity, Organization, Years experience, Teaching style
 Instructional assessment, Availability after class, Communication outside of 
 class, Engagement, and Flexibility</p>
 <br>
-<div><%= link_to 'Search By Year', survey_index_path %></div>
+<div><%= link_to 'Search By Year', survey_index_path %> <%= link_to 'Search By Time', prof_index_path %> <%= link_to 'Search By Type', instruct_index_path %></div>
+
